[metadata]
name = devenv
version = 0.0.1
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
author = Matej Cotman
author_email = matej@matejc.com

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >3.5

[options.packages.find]
where = src

[options.package_data]
devenv = *.nix, modules/*.nix

[options.entry_points]
console_scripts =
    devenv = devenv:run_devenv
